[package]
name = "binus_access"
version = "0.1.0"
edition = "2021"

[dependencies]
ron = "0.8"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
strip = true